--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,7 @@
     "/js/lang-ru.b7c7e3e10409e79ad2af.js": "/js/lang-ru.b7c7e3e10409e79ad2af.js",
     "/js/lang-en.f817e1739454589b9504.js": "/js/lang-en.f817e1739454589b9504.js",
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/lang-ru.4cb8ab358cade295c7c4.js": "/js/lang-ru.4cb8ab358cade295c7c4.js",
+    "/js/lang-en.a8efe2323ad08dcc8f10.js": "/js/lang-en.a8efe2323ad08dcc8f10.js"
 }
