lang phrases added

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,8 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/js/lang-ru.4cb8ab358cade295c7c4.js": "/js/lang-ru.4cb8ab358cade295c7c4.js",
-    "/js/lang-en.a8efe2323ad08dcc8f10.js": "/js/lang-en.a8efe2323ad08dcc8f10.js"
+    "/js/lang-en.a8efe2323ad08dcc8f10.js": "/js/lang-en.a8efe2323ad08dcc8f10.js",
+    "/js/lang-ru.8fecbb6b05dbb9e7b13a.js": "/js/lang-ru.8fecbb6b05dbb9e7b13a.js",
+    "/js/lang-en.de9c61f1a73111ee5ec0.js": "/js/lang-en.de9c61f1a73111ee5ec0.js",
+    "/js/lang-en.4bb7c425e2ac9eabc9f9.js": "/js/lang-en.4bb7c425e2ac9eabc9f9.js"
 }
