--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.5",
     "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
+    "vuex-router-sync": "^5.0.0",
+    "webpack-livereload-plugin": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "browser-sync": "^2.23.6",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.1.0",
     "eslint": "^4.15.0",
     "eslint-plugin-vue-libs": "^2.1.0",
