--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,7 @@
     "/js/lang-ru.dcab5b083a326a469b79.js": "/js/lang-ru.dcab5b083a326a469b79.js",
     "/js/lang-en.22a1fce029e1c886ead7.js": "/js/lang-en.22a1fce029e1c886ead7.js",
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/lang-ru.326bb4f67815c12d5b91.js": "/js/lang-ru.326bb4f67815c12d5b91.js",
+    "/js/lang-en.cd57c71e4a9964fc1af6.js": "/js/lang-en.cd57c71e4a9964fc1af6.js"
 }
