--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "vue-i18n": "^7.6.0",
     "vue-meta": "^1.5.0",
     "vue-router": "^3.0.1",
-    "vuetify": "1.0.17",
+    "vuetify": "^1.1.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "2.5.2",
     "vuex-router-sync": "^5.0.0"
